WIP header/footer adjusted, some spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,23 @@
 
 h1{
     color: green;
+    text-align: center;
 }
 
 body{
-    background-image: url(/images/standrews.jpg);
+    background-image: url(/images/StAndrews.jpg);
     background-size: cover;
 }
 
 .header-container{
-    display: flex;
-    justify-content: space-between;
-    margin: 3em 3em;
+    /* display: flex;
+    justify-content: space-between; */
+    margin-top: 2em;
 }
 
-footer {
+.footer-container {
     display: flex;
+    background-color: white;
     justify-content: space-evenly;
     padding-bottom: 2em;
     color: darkgreen;
@@ -40,7 +42,7 @@ footer {
 
 .main-container{
     width: 80%;
-    margin: 2em auto;
+    margin: .5em auto;
     background-color: rgba(101, 121, 101, 0.4);
 
     display: grid;
@@ -52,10 +54,15 @@ footer {
 
 .aboutme-container{
     display: flex;
-    color: whitesmoke;
     justify-content: space-around;
     padding-left: 2em;
     padding-right: 2em;
+}
+
+.myBioText{
+    margin-left: 2em;
+    margin-right: 2em;
+    color:red;
 }
 
 .myBioLinks{
@@ -94,13 +101,18 @@ footer {
 }
 
 .nav-container{
+    position: fixed;
+    top:0;
+    width: 100%;
+    background-color: green;
     display: flex;
-    flex-direction: row;
+    justify-content: space-evenly;
+    padding-right: 12em;
 }
 
 .nav-container a{
     text-decoration: none;
-    color: seagreen;
+    color: white;
     padding: .25em .25em
 }
 
@@ -111,8 +123,8 @@ footer {
 .techskills-container{
     display: flex;
     align-items: center;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding-left: 5em;
+    padding-right: 5em;
     color: whitesmoke;
 }
 
